# Neural-Speech-Decoding

./: .gitignore  DataCollectionExperiment.psyexp  DataCollectionExperiment_lastrun.py  Data_Visualization_Check.ipynb  Neural_decoding_data_collector.py  app.py  knight_board_init.py  readme.md  requirements.txt  streamlit_app.py  words.csv
EEG_data_collection/: backgroundnoise_19cc167a-9060-4c77-9269-249e132906c7.csv  backgroundnoise_24f96f5a-bcf2-46ce-83b4-4a383a45a08b.csv  backgroundnoise_3db84f72-a37e-46be-a8ed-9d1758f64c52.csv  backgroundnoise_438f9246-29f6-44c9-83d0-dc3986224cd4.csv  backgroundnoise_4aa97ae9-02ea-4838-9391-7dc0573dc292.csv  backgroundnoise_54261ee1-5ac8-4081-8f06-cde8a02c3d4f.csv  backgroundnoise_5b22fadc-5b27-42ad-88dc-108d30e11625.csv  backgroundnoise_65ac52ea-94a6-49a9-ae39-895bfafffec8.csv  backgroundnoise_66eaa11c-4a73-487b-93a7-2b7360e4c6ba.csv  backgroundnoise_67f2aad5-1407-4d4d-9c4a-b864915c37ce.csv  backgroundnoise_7171e416-1eed-4589-bcba-9f68f3a8a638.csv  backgroundnoise_7a1e1312-170a-4787-909d-522653a2451d.csv  backgroundnoise_7ec1d7d5-792e-4874-83db-c025b57223b2.csv  (+148 more)
MindsAI/: CITATION.cff  README.md
Neuro-Alpha-App/Utilities/MindsAI/: LICENSE  PATENTS.md  pyproject.toml  requirements.txt
Neuro-Alpha-App/Utilities/MindsAI/examples/: Minds_AI_Filter_Offline_Signal_Analysis.py  Minds_AI_Filter_Real-time_Signal_Analysis.py
Neuro-Alpha-App/Utilities/MindsAI/examples/data/: data_mai_metrics_1e-34_20251017T030538.json
Neuro-Alpha-App/Utilities/MindsAI/mindsai_filter_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+915 files in other folders)
